aws/cloudformation/stg-base-cfn-sk.json
{
  "AWSTemplateFormatVersion":"2010-09-09",
  "Description":"Base AWS Resources for BigData STG.",
  "Metadata":{
    "ENV":{"Description":"STG"}
  },
  "Parameters":{
    "ENV":{
      "Type":"String",
      "Description":"BigData Environment."
    },
    "STGVPCCIDRBLK":{
      "Type":"String",
      "Description":"STG VPC CIDR Block."
    },
    "STGHDSSHPVTKey":{
      "Type":"CommaDelimitedList",
      "NoEcho":"true",
      "Description":"STG Hadoop SSH Private Key."
    },
    "STGHDSSHPUBKey":{
      "Type":"String",
      "NoEcho":"true",
      "Description":"STG Hadoop SSH Public Key."
    }
  },
  "Mappings":{
    "VPCSNCONF":{
      "HDSN1":{"AZ":"us-west-2a","CIDR":"10.2.1.0/24"},
      "HDSN2":{"AZ":"us-west-2b","CIDR":"10.2.2.0/24"}
    }
  },
  "Conditions":{
    "CheckENV":{"Fn::Equals":[{"Ref":"ENV"},"STG"]}
  },
  "Resources":{
    "STGIAMEC2RL":{
      "Type":"AWS::IAM::Role",
      "Condition":"CheckENV",
      "Properties":{
        "AssumeRolePolicyDocument":{
          "Version":"2012-10-17",
          "Statement":[
            {
              "Effect":"Allow",
              "Principal":{
                "Service":"ec2.amazonaws.com"
              },
              "Action":"sts:AssumeRole"
            }
          ]
        },
        "ManagedPolicyArns":[
          "arn:aws:iam::aws:policy/AmazonS3FullAccess"
        ],
        "Path":"/",
        "RoleName":"STG-IAM-EC2-RL",
        "Tags":[
          {"Key":"Name","Value":"STG-IAM-EC2-RL"},
          {"Key":"Environment","Value":"STG"},
          {"Key":"Region","Value":"us-west-2"}
        ]
      }
    },
    "STGIAMEC2INSPF":{
      "Type":"AWS::IAM::InstanceProfile",
      "DependsOn":["STGIAMEC2RL"],
      "Properties":{
        "Path":"/",
        "Roles":[{"Ref":"STGIAMEC2RL"}],
        "InstanceProfileName":"STG-IAM-EC2-INS-PF"
      }
    },
    "STGVPC":{
      "Type":"AWS::EC2::VPC",
      "Condition":"CheckENV",
      "Properties":{
        "CidrBlock":{"Ref":"STGVPCCIDRBLK"},
        "EnableDnsSupport":true,
        "EnableDnsHostnames":true,
        "InstanceTenancy":"default",
        "Tags":[
          {"Key":"Name","Value":"STG-VPC"},
          {"Key":"Environment","Value":"STG"},
          {"Key":"Region","Value":"us-west-2"}
        ]
      }
    },
    "STGVPCIG":{
      "Type":"AWS::EC2::InternetGateway",
      "Condition":"CheckENV",
      "DependsOn":["STGVPC"],
      "Properties":{
        "Tags":[
          {"Key":"Name","Value":"STG-VPC-IG"},
          {"Key":"Environment","Value":"STG"},
          {"Key":"Region","Value":"us-west-2"}
        ]
      }
    },
    "STGVPCIGATH":{
      "Type":"AWS::EC2::VPCGatewayAttachment",
      "Condition":"CheckENV",
      "DependsOn":["STGVPC","STGVPCIG"],
      "Properties":{
        "VpcId":{"Ref":"STGVPC"},
        "InternetGatewayId":{"Ref":"STGVPCIG"}
      }
    },
    "STGVPCRTTPUB":{
      "Type":"AWS::EC2::RouteTable",
      "Condition":"CheckENV",
      "DependsOn":["STGVPC"],
      "Properties":{
        "VpcId":{"Ref":"STGVPC"},
        "Tags":[
          {"Key":"Name","Value":"STG-VPC-RTT-PUB"},
          {"Key":"Environment","Value":"STG"},
          {"Key":"Region","Value":"us-west-2"}
        ]
      }
    },
    "STGVPCRTTPUBRT1":{
      "Type":"AWS::EC2::Route",
      "Condition":"CheckENV",
      "DependsOn":["STGVPC","STGVPCIG","STGVPCRTTPUB"],
      "Properties":{
        "RouteTableId":{"Ref":"STGVPCRTTPUB"},
        "DestinationCidrBlock":"0.0.0.0/0",
        "GatewayId":{"Ref":"STGVPCIG"}
      }
    },
    "STGVPCHDSN1":{
      "Type":"AWS::EC2::Subnet",
      "Condition":"CheckENV",
      "DependsOn":["STGVPC"],
      "Properties":{
        "VpcId":{"Ref":"STGVPC"},
        "CidrBlock":{"Fn::FindInMap":["VPCSNCONF","HDSN1","CIDR"]},
        "AvailabilityZone":{"Fn::FindInMap":["VPCSNCONF","HDSN1","AZ"]},
        "Tags":[
          {"Key":"Name","Value":"STG-VPC-HD-SN-1"},
          {"Key":"Environment","Value":"STG"},
          {"Key":"Region","Value":"us-west-2"}
        ]
      }
    },
    "STGVPCHDSN1RTTASS":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "Condition":"CheckENV",
      "DependsOn":["STGVPC","STGVPCHDSN1","STGVPCRTTPUB"],
      "Properties":{
        "RouteTableId":{"Ref":"STGVPCRTTPUB"},
        "SubnetId":{"Ref":"STGVPCHDSN1"}
      }
    },
    "STGVPCHDSN2":{
      "Type":"AWS::EC2::Subnet",
      "Condition":"CheckENV",
      "DependsOn":["STGVPC"],
      "Properties":{
        "VpcId":{"Ref":"STGVPC"},
        "CidrBlock":{"Fn::FindInMap":["VPCSNCONF","HDSN2","CIDR"]},
        "AvailabilityZone":{"Fn::FindInMap":["VPCSNCONF","HDSN2","AZ"]},
        "Tags":[
          {"Key":"Name","Value":"STG-VPC-HD-SN-2"},
          {"Key":"Environment","Value":"STG"},
          {"Key":"Region","Value":"us-west-2"}
        ]
      }
    },
    "STGVPCHDSN2RTTASS":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "Condition":"CheckENV",
      "DependsOn":["STGVPC","STGVPCHDSN2","STGVPCRTTPUB"],
      "Properties":{
        "RouteTableId":{"Ref":"STGVPCRTTPUB"},
        "SubnetId":{"Ref":"STGVPCHDSN2"}
      }
    },
    "STGVPCHDSG":{
      "Type":"AWS::EC2::SecurityGroup",
      "Condition":"CheckENV",
      "DependsOn":["STGVPC"],
      "Properties":{
        "VpcId":{"Ref":"STGVPC"},
        "GroupDescription":"STG VPC HD Security Group.",
        "GroupName":"STG-VPC-HD-SG",
        "SecurityGroupIngress":[
          {"IpProtocol":"-1","CidrIp":{"Ref":"STGVPCCIDRBLK"}},
          {"IpProtocol":"tcp","FromPort":22,"ToPort":22,"CidrIp":"0.0.0.0/0"},
          {"IpProtocol":"tcp","FromPort":50070,"ToPort":50070,"CidrIp":"0.0.0.0/0"}
        ],
        "SecurityGroupEgress":[
          {"IpProtocol":"-1","CidrIp":"0.0.0.0/0"}
        ],
        "Tags":[
          {"Key":"Name","Value":"STG-VPC-HD-SG"},
          {"Key":"Environment","Value":"STG"},
          {"Key":"Region","Value":"us-west-2"}
        ]
      }
    },
    "STGOWHDSK":{
      "Type":"AWS::OpsWorks::Stack",
      "DependsOn":["STGVPC","STGVPCHDSN1","STGVPCHDSN2","STGIAMEC2RL","STGIAMEC2INSPF"],
      "Properties":{
        "Attributes":{"Color":"rgb(38, 146, 168)"},
        "ClonePermissions":false,
        "ConfigurationManager":{"Name":"Chef","Version":"12"},
        "DefaultAvailabilityZone":"us-west-2a",
        "DefaultInstanceProfileArn":{"Fn::GetAtt":["STGIAMEC2INSPF","Arn"]},
        "DefaultOs":"Custom",
        "DefaultRootDeviceType":"ebs",
        "DefaultSubnetId":{"Ref":"STGVPCHDSN1"},
        "HostnameTheme":"Layer_Dependent",
        "Name":"STG-OW-HD-SK",
        "ServiceRoleArn":{"Fn::Join":[":",["arn:aws:iam:",{"Ref":"AWS::AccountId"},"role/aws-opsworks-service-role"]]},
        "UseCustomCookbooks":true,
        "CustomJson":{
          "hadoop":{
            "ssh":{
              "private_key":{"Fn::Join":["\n",{"Ref":"STGHDSSHPVTKey"}]},
              "public_key":{"Ref":"STGHDSSHPUBKey"}
            }
          }
        },
        "CustomCookbooksSource":{
          "Type":"s3",
          "Url":"https://s3.amazonaws.com/opsworks-chef-source/cookbooks.tar.gz"
        },
        "UseOpsworksSecurityGroups":false,
        "VpcId":{"Ref":"STGVPC"},
        "Tags":[
          {"Key":"Environment","Value":"STG"},
          {"Key":"Region","Value":"us-west-2"}
        ]
      }
    },
    "STGOWHDCT1LR":{
      "Type":"AWS::OpsWorks::Layer",
      "DependsOn":["STGVPC","STGVPCHDSG","STGOWHDSK"],
      "Properties":{
        "AutoAssignElasticIps":false,
        "AutoAssignPublicIps":true,
        "CustomSecurityGroupIds":[{"Ref":"STGVPCHDSG"}],
        "CustomRecipes":{
          "Setup":["hadoop::setup"],
          "Configure":["hadoop::configure"],
          "Deploy":[],
          "Undeploy":[],
          "Shutdown":["hadoop::stop"]
        },
        "EnableAutoHealing":false,
        "InstallUpdatesOnBoot":false,
        "LifecycleEventConfiguration":{
          "ShutdownEventConfiguration":{"DelayUntilElbConnectionsDrained":true,"ExecutionTimeout":120}
        },
        "Name":"STG-OW-HD-CT-1-LR",
        "Shortname":"stg-ow-hd-ct-1-lr",
        "StackId":{"Ref":"STGOWHDSK"},
        "Type":"custom"
      }
    }
  }
}
